# qlever-control

./: .gitignore  .pre-commit-config.yaml  Qleverfile.ini  README.md  pyproject.toml  qlever  qlever.OLD  qlever.py  ruff.toml  setup.py
.github/workflows/: end-to-end-test-macos.yml  end-to-end-test-ubuntu.yml  end-to-end-test.yml  format-check.yml  pytest.yml  qleverfiles-check.yml
Qleverfiles/: Qleverfile.dblp  Qleverfile.dblp-plus  Qleverfile.default  Qleverfile.dnb  Qleverfile.fbeasy  Qleverfile.freebase  Qleverfile.imdb  Qleverfile.olympics  Qleverfile.osm-country  Qleverfile.pubchem  Qleverfile.scientists  Qleverfile.uniprot  Qleverfile.wikidata  Qleverfile.wp  Qleverfile.yago-4
src/: main.py  qlever_action.py  qlever_cmd.py  qlever_config.py  qlever_docker.py  qlever_logging.py  qlever_native.py
src/other_engines/: config.py  engine.py  main.py
src/other_engines/Configfiles/: Configfile.dblp  Configfile.default  Configfile.imdb  Configfile.olympics
src/other_engines/engines/: oxigraph.py
src/qblazegraph/: Dockerfile  RWStore.properties  blazegraph.properties  qleverfile.py
src/qblazegraph/commands/: benchmark_queries.py  example_queries.py  index.py  query.py  setup_config.py  start.py  status.py  stop.py
src/qgraphdb/: qleverfile.py
src/qgraphdb/commands/: benchmark_queries.py  index.py  query.py  setup_config.py  start.py  status.py  stop.py
src/qjena/: Dockerfile  qleverfile.py
src/qjena/commands/: benchmark_queries.py  example_queries.py  extract_queries.py  get_data.py  index.py  log.py  query.py  setup_config.py  start.py  status.py  stop.py
src/qlever/: __init__.py  __main__.py  command.py  config.py  containerize.py  envvars.py  globals.py  log.py  qlever_main.py  qlever_old.py  qleverfile.py  util.py
src/qlever/Qleverfiles/: Qleverfile.dblp  Qleverfile.dblp-plus  Qleverfile.dbpedia  Qleverfile.default  Qleverfile.dnb  Qleverfile.fbeasy  Qleverfile.freebase  Qleverfile.imdb  Qleverfile.ohm-planet  Qleverfile.olympics  Qleverfile.orkg  Qleverfile.osm-country  Qleverfile.osm-planet  Qleverfile.pubchem  Qleverfile.scientists  Qleverfile.uniprot  Qleverfile.vvz  Qleverfile.wikidata  Qleverfile.wikipathways  Qleverfile.yago-4
src/qlever/commands/: add-text-index.py  add_text_index.py  benchmark_queries.py  cache_stats.py  clear_cache.py  config.py  example_queries.py  extract_queries.py  get-data.py  get_data.py  get_polygon.py  index-stats.py  index.py  index_stats.py  install.py  log.py  osm_update.py  query.py  sehr_doof.py  serve_evaluation_app.py  settings.py  setup-config.py  setup_config.py  show_config.py  start.py  status.py  stop.py  system_info.py  troubleshoot.py  ui.py  update.py  update_osm.py  update_wikidata.py  warmup.py  wkt.py
src/qmdb/: Dockerfile  qleverfile.py
src/qmdb/commands/: index.py  (+6 more)
src/qoxigraph/: qleverfile.py
src/qvirtuoso/: Dockerfile  qleverfile.py
test/qlever/: conftest.py  test_status_execute_mocken.py  test_stop_execute.py  test_stop_other_methods.py  test_util.py
(+53 files in other folders)
