[project]
name = "qlever"
description = "Script for using the QLever SPARQL engine."
version = "0.4.2"
authors = [
    { name = "Hannah Bast", email = "bast@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = ["SPARQL", "RDF", "knowledge graphs", "triple store"]

classifiers = [
 "Topic :: Database :: Database Engines/Servers",
 "Topic :: Database :: Front-Ends"
]

dependencies = [ "psutil", "termcolor", "argcomplete" ]

[project.urls]
Github = "https://github.com/ad-freiburg/qlever-control"

[project.scripts]
"qlever" = "qlever.qlever_main:main"
"qlever-old" = "qlever.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = [ "qlever", "qlever.commands", "qlever.Qleverfiles" ]
package-data = { "qlever" = ["Qleverfiles/*"] }

[tool.pytest.ini_options]
pythonpath = ["src"]
