[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlever"
description = "Script for using the QLever SPARQL engine."
version = "0.5.17"
authors = [
    { name = "Hannah Bast", email = "bast@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

keywords = ["SPARQL", "RDF", "Knowledge Graphs", "Triple Store"]

classifiers = [
 "Topic :: Database :: Database Engines/Servers",
 "Topic :: Database :: Front-Ends"
]

dependencies = [ "psutil", "termcolor", "argcomplete" ]

[project.urls]
Github = "https://github.com/ad-freiburg/qlever"

[project.scripts]
"qlever" = "qlever.qlever_main:main"
"qlever-old" = "qlever.qlever_old:main"

[tool.setuptools]
license-files = ["LICENSE"]
package-data = { "qlever" = ["Qleverfiles/*"] }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79 
[tool.ruff.lint]
extend-select = ["I"]
