[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlever"
description = "Command-line tool for using the QLever graph database"
version = "0.5.23"
authors = [
    { name = "Hannah Bast", email = "bast@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

keywords = ["Graph database", "Triplestore", "Knowledge graphs", "SPARQL", "RDF"]

classifiers = [
 "Topic :: Database :: Database Engines/Servers",
 "Topic :: Database :: Front-Ends"
]

dependencies = [ "psutil", "termcolor", "argcomplete", "pyyaml", "rdflib" ]

[project.urls]
Github = "https://github.com/ad-freiburg/qlever"

[project.scripts]
"qlever" = "qlever.qlever_main:main"
"qoxigraph" = "qlever.qlever_main:main"

[tool.setuptools]
license-files = ["LICENSE"]
package-data = { "qlever" = ["Qleverfiles/*"] }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79 
[tool.ruff.lint]
extend-select = ["I"]
